# mandart-engine-rust

./: Cargo.toml  README.md  config.toml
src/: api.rs  calc.rs  check.rs  config.rs  file_io.rs  grid.rs  image.rs  inputs.rs  lib.rs  main.rs  outputs.rs  utils.rs  xartist.rs  xcheck.rs  xmain.rs  xoutputs.rs
tests/: file_tests.rs  grid_tests.rs  image_tests.rs
