[package]
name = "mandart-engine-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
image = "0.25.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] , optional = true}
serde-wasm-bindgen = {version = "0.6.5", optional = true}
web-sys = { version = "0.3", features = ["console"] }
libc = { version = "0.2", optional = true }
base64 = "0.22.1"
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "rlib"]  # Supports both Rust lib & FFI

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
ffi = ["libc"]

[profile.release]
lto = true  # Optimize for smaller binary size